--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
   "scripts": {
     "dev": "waku dev",
     "build": "waku build",
-    "start": "waku start"
+    "start": "waku start",
+    "test": "npx jest --watch",
+    "format": "npx prettier src --write"
   },
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-server-dom-webpack": "19.0.0",
+    "sqlite3": "^5.1.7",
     "waku": "0.21.9"
   },
   "devDependencies": {
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "3.4.16",
-    "typescript": "5.7.2"
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "5.7.2",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
